package game

import utility.Vector3

class Food(position: Vector3) : GameObject(position)