package game

import utility.Vector3

abstract class GameObject(var position: Vector3)