package game

import utility.Vector3

class Obstacle(position: Vector3) : GameObject(position)