@startuml classDiagram
skinparam groupInheritance 2

' Game classes
class Game {
    + checkSnakeCollision(): bool
    + checkCollision(GameObject, GameObject): bool
    + startGame()
    + endGame()
}

abstract GameObject {
    - position: Vector3
}

class Snake {
    + growLength()
    + changeDirection(Vector3)
    + move()

    - speed: Float
}

class Food {
}

class Obstacle {
}

' Util classes
class Controller {
    + handleInput()
    + updateGame()
}

class View {
    + drawGame()
}

class Vector3 {
    - x: Int
    - y: Int
    - w: Int

    + sub(Vector3): Vector3
    + add(Vector3): Vector3
    + scale(Vector3): Vector3
}

' Inheritance
GameObject <|-up- Food
GameObject <|-up- Obstacle
GameObject <|-up- Snake

' Associations
Game "1" *.. "1" Snake : "snake"
Game "1" *.. "1" Food : "food"
Game "1" *.. "0..*" Obstacle : "obstacles"
Game "1" *.left. "1" Vector3 : "worldSize"
GameObject "1" *.left. "1" Vector3 : "position"
Snake "1" *.left. "1" Vector3 : "direction"
Snake "1" *.left. "1..*" Vector3 : "body"
View "1" *.. "1" Game : "game"
Controller "1" *.. "1" Game : "game"

@enduml